task(jvm) opening package for java 21
ref: #27766